Added option to choose to include older events in requests
Also made some slight optimizations to some of the EventDao queries.
