# lib/controllers/routes/events.js
@@ -17,7 +17,10 @@ router.use(redisMiddleware);
  * Full path : /events/create
  **/
 router.post('/create', function(req, res){
-  eventsService.createEvent(req.body, req.user).then(function(result){
+  eventsService.createEvent({
+    'eventData' : req.body,
+    'user' : req.user
+  }).then(function(result){
     res.send(result);
   }).catch(function(error){
     res.status(error.status).send(error);
@@ -29,7 +32,10 @@ router.post('/create', function(req, res){
  * Full path : /events/update
  **/
 router.post('/update', function(req, res){
-  eventsService.updateEvent(req.body, req.user).then(function(result){
+  eventsService.updateEvent({
+    'eventData' : req.body,
+    'user' : req.user
+  }).then(function(result){
       res.send(result);
   }).catch(function(error){
       res.status(error.status).send(error);
@@ -41,22 +47,9 @@ router.post('/update', function(req, res){
  * Full path : /events/remove
  **/
 router.post('/remove', function(req, res){
-  eventsService.removeEvent(req.body.eventID, req.user).then(function(result){
-    res.send(result);
-  }).catch(function(error){
-    res.status(error.status).send(error);
-  });
-});
-
-/**
- * Route for retrieving events that the user has management access
- *
- * Full path : /events/managing
- **/
-router.get('/managing', function(req, res){
-  eventsService.getEventsManaging(req.user.personID, req.user.orgGuid, {
-    'limit' : req.query.limit,
-    'page' : req.query.page
+  eventsService.removeEvent({
+    'eventID' : req.body.eventID,
+    'user' : req.user
   }).then(function(result){
     res.send(result);
   }).catch(function(error){
@@ -70,9 +63,11 @@ router.get('/managing', function(req, res){
  * Full path : /events/managing
  **/
 router.get('/managing', function(req, res){
-  eventsService.getEventsManaging(req.user.personID, req.user.orgGuid, {
+  eventsService.getEventsManaging({
+    'user' : req.user,
     'limit' : req.query.limit,
-    'page' : req.query.page
+    'page' : req.query.page,
+    'upcoming' : req.query.upcoming
   }).then(function(result){
     res.send(result);
   }).catch(function(error){
@@ -85,7 +80,8 @@ router.get('/managing', function(req, res){
  * Full path : /events/attending
  **/
 router.get('/attending', function(req, res){
-  eventsService.getEventsAttending(req.user.personID, req.user.orgGuid, {
+  eventsService.getEventsAttending({
+    'user' : req.user,
     'limit' : req.query.limit,
     'page' : req.query.page
   }).then(function(result){
@@ -101,9 +97,11 @@ router.get('/attending', function(req, res){
  **/
 router.get('/public', function(req, res){
   res.set({'Content-Type' : 'application/json'});
-  eventsService.getPublicEvents(req.user.orgGuid, {
+  eventsService.getPublicEvents({
+    'user' : req.user,
     'limit' : req.query.limit,
-    'page' : req.query.page
+    'page' : req.query.page,
+    'upcoming' : req.query.upcoming
   }).then(function(result){
     res.send(result);
   }).catch(function(error){
@@ -117,10 +115,14 @@ router.get('/public', function(req, res){
  * Full path : /events/private
  **/
 router.get('/private', function(req, res){
-  eventsService.getPrivateEvents(req.user.personID, req.user.orgGuid, {
+  var time = Date.now();
+  eventsService.getPrivateEvents({
+    'user' : req.user,
     'limit' : req.query.limit,
-    'page' : req.query.page
+    'page' : req.query.page,
+    'upcoming' : req.query.upcoming
   }).then(function(result){
+    console.log(Date.now() - time);
     res.send(result);
   }).catch(function(error){
     res.status(error.status).send(error);
@@ -128,13 +130,14 @@ router.get('/private', function(req, res){
 });
 
 /**
- * Route for retrieving an event's attendees
+ * Route for retrieving an event's managers
  *
  * Full path : /events/managers
  **/
 router.get('/getManagers', function(req, res){
   res.set({'Content-Type' : 'application/json'});
-   eventsService.getEventManagers(req.query.eventID, {
+   eventsService.getEventManagers({
+     'eventID' : req.query.eventID,
      'limit' : req.query.limit,
      'page' : req.query.page
    }).then(function(result){
@@ -149,7 +152,8 @@ router.get('/getManagers', function(req, res){
  * Full path : /events/attendees
  **/
 router.get('/getEventCheckIns', function(req, res){
-  eventsService.getEventCheckIns(req.query.eventID, {
+  eventsService.getEventCheckIns({
+    'eventID' : req.query.eventID,
     'limit' : req.query.limit,
     'page' : req.query.page
   }).then(function(result){
@@ -160,12 +164,20 @@ router.get('/getEventCheckIns', function(req, res){
  });
 
  router.get('/searchManagedEvents', function(req, res){
-   eventsService.searchManagedEvents(req.query.q, req.user, {
+   var time = Date.now();
+   console.log('this is the right route');
+   eventsService.searchManagedEvents({
+     'query' : req.query.q,
+     'user' : req.user,
      'limit' : req.query.limit,
-     'page' : req.query.page
+     'page' : req.query.page,
+     'upcoming' : req.query.upcoming
    }).then(function(result){
+     console.log('wow');
+     console.log(Date.now() - time);
      res.send(result);
    }).catch(function(error){
+     console.log(error);
      res.status(error.status).send(error);
    })
  });
@@ -177,7 +189,11 @@ router.get('/getEventCheckIns', function(req, res){
   * name, personID, orgGuid, and
   **/
  router.post('/addPrivateAttendee', function(req, res){
-   eventsService.addPrivateAttendee(req.body.eventID, req.user, req.body.attendee).then(function(result){
+   eventsService.addPrivateAttendee({
+     'eventID' : req.body.eventID,
+     'user' : req.user,
+     'attendee' : req.body.attendee
+   }).then(function(result){
      res.send(result);
    }).catch(function(error){
      res.status(error.status).send(error);
@@ -191,7 +207,11 @@ router.get('/getEventCheckIns', function(req, res){
   * name, personID, orgGuid, and
   **/
  router.post('/addEventManager', function(req, res){
-   eventsService.addEventManager(req.body.eventID, req.user, req.body.manager).then(function(result){
+   eventsService.addEventManager({
+     'eventID' : req.body.eventID,
+     'user' : req.user,
+     'newManager' : req.body.manager
+   }).then(function(result){
      res.send(result);
    }).catch(function(error){
      res.status(error.status).send(error);
@@ -205,7 +225,11 @@ router.get('/getEventCheckIns', function(req, res){
   * name, personID, orgGuid, and timestamp
   **/
  router.post('/removePrivateAttendee', function(req, res){
-   eventsService.removeAttendee(req.body.eventID, req.user, req.body.personID).then(function(result){
+   eventsService.removeAttendee({
+     'eventID' : req.body.eventID,
+     'user' : req.user,
+     'personID' : req.body.personID
+   }).then(function(result){
      res.send(result);
    }).catch(function(error){
      res.status(error.status).send(error);
@@ -218,7 +242,11 @@ router.get('/getEventCheckIns', function(req, res){
  * name, personID, orgGuid, and timestamp
  **/
 router.post('/checkIn', function(req, res){
-  eventsService.checkIntoEvent(req.body.eventID, req.user, req.body.checkIn).then(function(result){
+  eventsService.checkIntoEvent({
+    'eventID' : req.body.eventID,
+    'user' : req.user,
+    'checkIn' : req.body.checkIn
+  }).then(function(result){
     res.send(result);
   }).catch(function(error){
     res.status(error.status).send(error);
