# lib/models/dao/EventDao.js
@@ -130,14 +130,20 @@ class EventDao {
    **/
   getAssociatedEvents (options){
     return new Promise(function(resolve, reject){
-      CheckIn.find({'personID' : options.personID, 'orgGuid' : options.orgGuid, 'eventManager' : options.manager})
-        .select('event checked_in -_id').populate('event').limit(options.limit)
-        .sort({'date' : -1}).skip(options.limit * options.page).lean().exec(function(error, result){
-          if(error || result === null || result === undefined )
-            reject(new EventDaoError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
-          else
-            resolve(result);
+      CheckIn.find({
+        'personID' : options.personID,
+        'orgGuid' : options.orgGuid,
+        'eventManager' : options.manager
+      }).distinct('event').lean().exec(function(error, eventIDs){
+        var eventOptions = {'_id' : {'$in' : eventIDs}};
+        if(options.upcoming === true){
+          eventOptions.date = {'$gte' : new Date()};
+        }
+        Event.find(eventOptions).lean().limit(options.limit)
+          .skip(options.limit * options.page).sort({'date' : -1}).exec(function(error, results){
+            resolve(results);
         });
+      });
     });
 
   }
@@ -153,8 +159,11 @@ class EventDao {
    **/
   getPublicEvents(options){
     return new Promise(function(resolve, reject){
-      Event.find({'orgGuid' : options.orgGuid, 'private' : false}).limit(options.limit)
-      .sort({'date' : -1}).skip(options.limit * options.page).lean().exec(function(error, result){
+      var eventOptions = {'orgGuid' : options.orgGuid, 'private' : false};
+      if(options.upcoming === true)
+        eventOptions.date = {'$gte' : new Date()}
+      Event.find(eventOptions).limit(options.limit)
+      .sort({'date' : 1}).skip(options.limit * options.page).lean().exec(function(error, result){
         if(error || result === null || result === undefined)
           reject(new EventDaoError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
         else
@@ -173,39 +182,22 @@ class EventDao {
    * The result contains the the events within an array.
    **/
   getPrivateEvents(options){
-    console.log(options.limit);
-    console.log(options.page);
     return new Promise(function(resolve, reject){
-      CheckIn.aggregate([
-        {'$match' : {
-          'personID' : options.personID,
-          'orgGuid' : options.orgGuid
-        }},
-        { '$lookup' : { // left join
-          'from' : 'events',
-          'localField' : 'event',
-          'foreignField' : '_id',
-          'as' : 'event'
-        }},
-        { '$project' : {
-          'event' : { '$arrayElemAt' : ['$event' , 0]}
-        }},
-        { '$match' : {
-          'event.private' : true
-        }},
-        { '$sort' : {
-          'date' : -1
-        }},
-        { '$skip' : options.limit * options.page}, // always skip before limiting
-        { '$limit' : options.limit},
-      ], function(error, result){
-        if(error || result === null || result === undefined )
-          reject(new EventDaoError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
-        else
-          resolve(result);
+      CheckIn.find({'personID' : options.personID, 'orgGuid' : options.orgGuid})
+      .distinct('event').lean().exec(function(error, results){
+        var eventOptions = {
+          '_id' : {'$in' : results},
+          'private' : true
+        }
+        if(options.upcoming === true)
+          eventOptions.date = {'$gte' : new Date()}
+        Event.find(eventOptions).sort({'date' : 1}).limit(options.limit).skip(options.limit * options.page).lean().exec(function(error, events){
+          //console.log(events);
+          console.log(error);
+          resolve(events);
+        });
       });
     });
-
   }
   /**
    *  get a count of public events that are in an orgGuid
@@ -258,7 +250,7 @@ class EventDao {
           'event' : mongoose.Types.ObjectId(eventID) // must cast when using aggregate
         }},
         {'$group' : {
-          '_id' : '$checked_in', 'total' : {'$sum' : 1 }
+          '_id' : '$checkedIn', 'total' : {'$sum' : 1 }
         }}
       ], function(error, result){
         if(error || result === null || result === undefined )
@@ -281,39 +273,20 @@ class EventDao {
    **/
   searchManagedEvents(options){
     return new Promise(function(resolve, reject){
-      console.log(options.limit);
-      console.log(options.page);
-      CheckIn.aggregate([
-        {'$match' : {
-          'personID' : options.personID,
-          'orgGuid' : options.orgGuid,
-          'eventManager'  : true
-        }},
-        { '$lookup' : { // left join
-          'from' : 'events',
-          'localField' : 'event',
-          'foreignField' : '_id',
-          'as' : 'event'
-        }},
-        { '$project' : {
-          'event' : { '$arrayElemAt' : ['$event' , 0]}
-        }},
-        { '$match' : {
-          'event.title' : new RegExp(options.eventTitle, 'i')
-        }},
-        { '$sort' : {
-          'date' : -1
-        }},
-        { '$skip' : options.limit * options.page}, // always skip before limiting
-        { '$limit' : options.limit},
-      ], function(error, result){
-        if(error || result === null || result === undefined )
-          reject(new EventDaoError(error, eventErrorTypes.UNABLE_TO_RETRIEVE_EVENTS_ERROR));
-        else
-          resolve(result);
+      // using populate with a match is much faster than using aggregate's lookup then match
+      CheckIn.find({'personID' : options.personID, 'orgGuid' : options.orgGuid, 'eventManager' : true})
+      .distinct('event').lean().exec(function(error, results){
+        var eventOptions = {
+          '_id' : {'$in' : results},
+          'title' : new RegExp(options.eventTitle, 'i')
+        };
+        if(options.upcoming === true)
+          eventOptions.date = {'$gte' : new Date()}
+        Event.find(eventOptions).sort({'date' : 1}).limit(options.limit).skip(options.limit * options.page).lean().exec(function(error, events){
+          resolve(events);
+        });
       });
     });
-
   }
 
   /**
@@ -348,7 +321,7 @@ class EventDao {
    **/
   getEventCheckIns(options){
     return new Promise(function(resolve, reject){
-      CheckIn.find({'event' : options.eventID, 'checked_in' : true}).select('-eventManager -event -id')
+      CheckIn.find({'event' : options.eventID, 'checkedIn' : true}).select('-eventManager -event -id')
         .limit(options.limit).skip(options.limit * options.page).sort({date : 1}).exec(function(error, result){
           if(error || result === undefined)
             reject(new EventDaoError(error, eventErrorTypes.GENERIC_ERROR));
@@ -426,7 +399,7 @@ class EventDao {
    **/
   removeUnattendedCheckInsByEvent(eventID){
     return new Promise(function(resolve, reject){
-      CheckIn.remove({'event' : eventID, 'eventManager' : false, 'checked_in' : false}, function(error, result){
+      CheckIn.remove({'event' : eventID, 'eventManager' : false, 'checkedIn' : false}, function(error, result){
         if(error)
           reject(new EventDaoError(error, eventErrorTypes.REMOVE_CHECKIN_ERROR));
         else
@@ -458,12 +431,12 @@ class EventDao {
           'as' : 'event'
         }},
         { '$project' : {
-          'checked_in' : 1,
+          'checkedIn' : 1,
           'event' : { '$arrayElemAt' : ['$event' , 0]}
         }},
         {'$group' : {
          '_id' : {
-           'checkedIn' : '$checked_in',
+           'checkedIn' : '$checkedIn',
            'private' : '$event.private'
          },
          'total' : {'$sum' : 1 }
