# lib/models/schema/CheckIn.js
@@ -17,8 +17,8 @@ var checkInSchema = new Schema({
   'event' : {'type' : Schema.Types.ObjectId, 'ref' : 'Event', 'required' : true},
   'name' : {'type' : String, 'index' : true, 'required' : true},
   'orgGuid' : {'type' : String, 'required' : true, 'index' : true},
-  'checked_in' : {'type' : Boolean, 'default' : false},
-  'timestamp' : Date, // date checked_in
+  'checkedIn' : {'type' : Boolean, 'default' : false},
+  'timestamp' : Date, // date checkedIn
   'eventManager' : {'type' : Boolean, 'required' : true, 'default' : false},
   'image' : {'type' : String, 'default' : null},
   'email' : {'type' : String, 'required' : true}
@@ -26,7 +26,6 @@ var checkInSchema = new Schema({
 
 // compound index to prevent duplicate check-ins
 checkInSchema.index({'personID' : 1, 'event' : 1, 'orgGuid' : 1}, {'unique' : true});
-checkInSchema.index({'event' : 1, 'orgGuid' : 1}, {'unique' : false});
-checkInSchema.index({'personID' : 1, 'event' : 1}, {'unique' : false});
+checkInSchema.index({'personID' : 1, 'orgGuid' : 1}, {'unique' : false});
 var CheckIn = mongoose.model('CheckIn', checkInSchema);
 module.exports = CheckIn;
