# lib/utils/errorResponses.js
@@ -10,6 +10,11 @@ module.exports = {
   /**
    *  Error responses for events routes
    **/
+  'INVALID_VALUE_FOR_UPCOMING' : {
+    'status' : 400,
+    'code' : 11,
+    'error_msg' : '\'upcoming\' must be a boolean value'
+  },
   'INVALID_LIMIT_OR_PAGE' : {
     'status' : 400,
     'code' : 1,
@@ -130,7 +135,7 @@ module.exports = {
     'code' : 9,
     'error_msg' : 'Unable to update a check in\'s status. Likely an error on the server.'
   },
-  'ALREADY_CHECKED_IN': {
+  'ALREADY_checkedIn': {
     'status' : 400,
     'code' : 9,
     'error_msg' : 'User is already checked into this event.'
